--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     },
     "dependencies": {
         "@vanyamate/market-place-service": "^0.2.12",
+        "formik": "^2.4.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "sass": "^1.69.5"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
