--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.18.0",
         "sass": "^1.69.5"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
