--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vanyamate/lgc": "^0.0.3",
         "@vanyamate/market-place-service": "^0.2.12",
         "formik": "^2.4.5",
         "react": "^18.2.0",
