--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@vanyamate/lgc": "^0.0.3",
         "@vanyamate/market-place-service": "^0.2.12",
+        "antd": "^5.10.3",
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
         "sass": "^1.69.5"
     },
     "devDependencies": {
+        "@types/antd": "^1.0.0",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@types/react-router-dom": "^5.3.3",
