--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.18.0",
-        "sass": "^1.69.5"
+        "sass": "^1.69.5",
+        "styled-components": "^5.3.10",
+        "swiper": "^10.2.0"
     },
     "devDependencies": {
         "@types/antd": "^1.0.0",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@types/react-router-dom": "^5.3.3",
+        "@types/styled-components": "^5.1.26",
+        "@types/swiper": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
