--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vanyamate/helpers": "^0.0.5",
         "@vanyamate/lgc": "^0.0.4",
         "@vanyamate/market-place-service": "^0.2.16",
         "antd": "^5.10.3",
